# ptz_gz_sim

./: CMakeLists.txt  README.md  README_CONTROL_FIX.md  README_DUAL_CONTROLLERS.md  README_NAVIGATION_INTEGRATION.md  package.xml
config/: controller_params.yaml  ptz_controllers.yaml
launch/: launch_sim.launch  launch_sim.py  minimal_sim.launch.py  ptz_controllers.launch.py  ptz_navigation_stack.launch.py  ptz_test.launch.py  spawn_ptz_in_rover_world.launch.py  spawn_ptz_in_rover_world_int.launch.py
models/leo_race_field/: leo_race_field.sdf
models/leo_race_field/marker_0/: marker_0.sdf
models/leo_race_field/marker_1/: marker_1.sdf
models/leo_race_field/marker_2/: marker_2.sdf
models/leo_race_field/marker_3/: marker_3.sdf
models/leo_race_field/marker_4/: marker_4.sdf
models/leo_race_field/qrcode_34/: model.config  model.sdf
scripts/: test_navigation_integration.sh  test_ptz_controllers.py
src/: CameraZoomPlugin.cc  CameraZoomPlugin.hh  fake_axis_camera.cpp  fake_axis_camera_int.cpp  zoom_controller.py
urdf/: axis_camera_gazebo.xacro  ptz.ros2_control.xacro
worlds/: default.sdf  leonardo_race.sdf
