<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ptz_gz_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pasqualemerone@yahoo.it">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gz-common5</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-rendering7</depend>
  <depend>gz-sim7</depend>
  <depend>ptz_action_server_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>position_controllers</depend>
  <depend>velocity_controllers</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!-- Tell gazebo / ignorable where our plugin library lives.  we
         install it directly under <prefix>/lib so this path is
         sufficient for both classic gazebo and ign-gazebo. -->
    <gazebo_ros plugin_path="${prefix}/plugins"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
